compiler/testData/diagnostics/tests/cast/AsErasedWarning.kt
// FIR_IDENTICAL

fun ff(a: Any) = a <!UNCHECKED_CAST!>as MutableList<String><!>
